# nx-neptune

./: .coveragerc  .gitignore  .gitmodules  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  THIRD_PARTY_LICENCES.md  agents.md  algorithms.md  connect.txt  liccheck.ini  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-jupyter.txt  requirements-test.txt  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: athena-databricks-connector.yml  athena-s3vector-connector.yml  docs.yml  main.yml  python-prerelease.yml  python-publish.yml  release.yml
athena-databricks-connector/: pom.xml
athena-s3vector-connector/: README.md  athena-example.yaml  athena-s3vector-connector.yaml  pom.xml
benchmarks/: benchmark_algorithms.py
cloudformation-templates/: README.md  deploy.sh  nx-neptune-sagemaker.json  teardown.sh
connectors/: README.md  pom.xml
connectors/athena-databricks-connector/: Dockerfile  README.md  athena-databricks-connector.yaml  pom.xml
connectors/athena-s3vector-connector/: README.md  pom.xml
doc/: conf.py  index.rst
docs/: requirements.txt
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/styles/: custom.css
example/: algo_bfs.py  algo_closeness.py  algo_degree.py  algo_louvain.py  algo_lpa.py  algo_page_rank.py  athena_table_import_export.py  example_security_athena_injection_test.py  example_security_graph_reset_test.py  example_security_injection_test.py  example_security_s3_versioning_test.py  instance_mgmt_lifecycle.py  instance_mgmt_lifecycle_with_configuration.py  neptune_create_destroy.py  neptune_create_destroy_with_s3.py  neptune_start_stop.py  nx_client_example.py  s3_import_export.py  test_algo_bfs.py
example/instance_management/: athena_snowflake_import_export.py  athena_table_import_export.py  create_delete_snapshots.py  create_import_from_s3_delete.py  stop_start_instances.py
integ_test/: conftest.py  test_algo_bfs.py  test_algo_closeness.py  test_algo_degree.py  test_algo_louvain.py  test_algo_lpa.py  test_algo_page_rank.py  test_security_s3_versioning.py
integ_test/graph_operations/: conftest.py  test_algo_closeness.py  test_algo_lpa.py  test_graph_crud.py  test_security_graph_reset.py  test_security_injection.py
integ_test/session_manager/: conftest.py  test_iam_permissions.py  test_instance_lifecycle.py  test_s3_import_export.py  test_session_manager_lifecycle.py  test_session_manager_read.py  test_snapshot.py
integ_test/tier1_graph/: conftest.py  test_session_manager_read.py
integ_test/tier2_export_import/: conftest.py  test_iam_permissions.py  test_s3_import_export.py  test_snapshot.py
integ_test/tier3_lifecycle/: conftest.py  test_instance_lifecycle.py  test_session_manager_lifecycle.py
integ_test/utils/: test_utils.py
notebooks/: README.md  bfs_demo.ipynb  closeness_centrality_demo.ipynb  degree_demo.ipynb  import_databricks_demo.ipynb  import_open_search_embedding_demo.ipynb  import_s3_table_demo.ipynb  import_s3_table_embedding_demo.ipynb  import_s3_vector_embedding_demo.ipynb  import_snowflake_table_demo.ipynb  instance_mgmt_lifecycle_demo.ipynb  instance_mgmt_with_configuration.ipynb  label_propagation_demo.ipynb  louvain_demo.ipynb  pagerank_demo.ipynb  s3_import_export_demo.ipynb  session_manager_comprehensive_demo.ipynb  snowflake_graph_view_demo.ipynb
nx_neptune/: __init__.py  instance_management.py  interface.py  na_client.py  na_graph.py  session_manager.py  validators.py
nx_neptune/algorithms/: __init__.py
nx_neptune/clients/: __init__.py  client_factory.py  iam_client.py  na_client.py  na_models.py  neptune_constants.py  opencypher_builder.py  response_utils.py
nx_neptune/interface/: graph_context.py
nx_neptune/utils/: __init__.py  decorators.py  task_future.py  utils.py
nx_neptune_analytics/: CONTRIBUTING.rst  __init__.py  __main__.py  base.py  cli.py  na_client.py
nx_plugin/: __init__.py  config.py
proxy/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
proxy/src/nx_neptune_proxy/: app.py  config.py  llm_generator.py  main.py  pipeline.py  state.py
proxy/src/nx_neptune_proxy/routers/: metadata.py  preview.py  project.py  projection.py  schemas.py  workspace.py
proxy/src/nx_neptune_proxy/services/: db.py  pipeline.py  project_deletion.py  project_store.py  projection_store.py  workspace_deletion.py  workspace_store.py
proxy/src/nx_neptune_proxy/utils/: __init__.py  aws_helper.py
proxy/tests/: test_app.py  test_metadata.py  test_projection.py
proxy/ui/: graphs.html  index.html  join-builder.html  query-builder.html
proxy/ui-src/: README.md  index.html  package-lock.json  package.json  vite.config.ts
proxy/ui-src/src/: App.tsx  index.css
proxy/ui-src/src/api/: index.ts
proxy/ui-src/src/components/: Sidebar.tsx  ui.tsx
proxy/ui-src/src/data/: projections.ts
proxy/ui-src/src/hooks/: useKeyboard.ts
proxy/ui-src/src/pages/: AddProject.tsx  AddProjection.tsx  Graphs.tsx  Import.tsx  Landing.tsx  Project.tsx  Projects.tsx  QueryBuilder.tsx  QueryManager.tsx  Sessions.tsx  Workspaces.tsx
requirements/: README.md  default.txt  developer.txt  examples.txt  test.txt
resources_management/: instance_management.py  pyproject.toml
resources_management/clients/: na_models.py
resources_management/context/: graph_context.py
resources_management/resource_mgmt/: __init__.py
resources_management/resource_mgmt/context/: __init__.py
resources_management/resource_mgmt/management/: __init__.py
tests/: conftest.py  test_base.py  test_interface.py  test_na_graph.py  test_reset_graph.py  test_start_export_task.py
tests/algorithms/: test_algorithm_utils.py
tests/clients/: test_check_assume_role.py  test_iam_client.py  test_instance_management.py  test_na_client.py  test_na_models.py  test_neptune_graph_permissions.py  test_opencypher_builder.py  test_parameter_map_builder.py  test_security_athena_injection.py  test_session_manager.py  test_validators.py
tests/utils/: test_decorators.py  test_task_future.py  test_utils.py
(+81 files in other folders)
