[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = "nx-neptune"
description = "Neptune computation backend for NetworkX"
authors = [{name = "Amazon Web Services"}]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ['version']
keywords = ["networkx", "graphs", "algorithms", "neptune"]
license = {text = "Apache-2.0"}
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
]

dependencies = [
    "networkx>=3.4.2,<4.0.0",
    "boto3>=1.37,<2.0",
    "cymple>=0.12.0,<1.0.0",
    "sqlglot>=28.0.0,<29.0.0",

]

[project.urls]
"Bug Tracker" = 'https://github.com/awslabs/nx-neptune/issues'
"Source Code" = 'https://github.com/awslabs/nx-neptune'

[project.entry-points."networkx.backends"]
neptune = "nx_neptune.interface:BackendInterface"

[project.entry-points."networkx.backend_info"]
neptune = "nx_plugin:get_info"

[project.optional-dependencies]
developer = [
    'pre-commit==3.8.0',
    "black",
    "Flake8-pyproject",
    "mypy",
    "sphinx",
    "isort",
    "pip-licenses"
]
test = [
    'pytest>=7.2',
    'pytest-asyncio>=0.26.0',
    'pytest-order>=1.3.0',
    'numpy>=1.23',
    'scipy>=1.9,!=1.11.0,!=1.11.1',
    "pytest-cov",
    "pandas"
]
jupyter = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.0.0",
    "nbstripout>=0.3.10"
]

[tool.setuptools]
zip-safe = false
include-package-data = false
packages = [
    'nx_plugin',
    'nx_neptune',
    'nx_neptune.algorithms',
    'nx_neptune.algorithms.centrality',
    'nx_neptune.algorithms.communities',
    'nx_neptune.algorithms.traversal',
    'nx_neptune.algorithms.link_analysis',
    'nx_neptune.algorithms.util',
    'nx_neptune.clients',
    'nx_neptune.utils',
]

platforms = [
    'Linux',
    'Mac OSX',
    'Windows',
    'Unix',
]

[tool.setuptools.dynamic.version]
attr = 'nx_neptune.__version__'

[tool.isort]
profile = "black"

[tool.flake8]
max-complexity = 12
max-line-length = 127
extend-ignore = ['E203','F401','F403','W503', 'C901']
# C901 to suppress lengthy API signature on algorithms

[tool.black]
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
exclude = []


[tool.pip-licenses]
ignore-packages = [
    # Following packge has no license info embedded on package level.
    "cymple", # MIT: https://github.com/Accenture/Cymple/blob/master/LICENSE
    "urllib3", # MIT: https://github.com/urllib3/urllib3/blob/main/LICENSE.txt
    "jupyter_core", # BSD 3-Clause License: https://github.com/jupyter/jupyter_core/blob/main/LICENSE
    "types-python-dateutil", #  Apache: https://github.com/python/typeshed/blob/main/LICENSE
    "pytest-asyncio", # Apache: https://github.com/pytest-dev/pytest-asyncio/blob/main/LICENSE
    "jsonschema-specifications", # MIT: https://github.com/python-jsonschema/jsonschema-specifications?tab=MIT-1-ov-file#readme
    "anyio", # MIT: https://github.com/agronholm/anyio/blob/master/LICENSE
    "python-dotenv", # BSD 3-Caluse: https://github.com/theskumar/python-dotenv/blob/main/LICENSE
    "MarkupSafe",
]
#
#allow-only = """
#Apache Software License;
#Apache-2.0; Apache License, Version 2.0;
#BSD License; BSD-3-Clause;
#CC0 1.0 Universal (CC0 1.0) Public Domain Dedication;
#GNU General Public License (GPL);
#MIT;MIT License;
#Mozilla Public License 2.0 (MPL 2.0);
#Public Domain;
#Python Software Foundation License;
#Zero-Clause BSD (0BSD);
#ISC License (ISCL);
#"""
