[project]
name = "nx-neptune-proxy"
version = "0.1.0"
description = "REST proxy for nx-neptune graph-over-data-lake workflows"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "httpx==0.28.1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
