[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = "nx-neptune-proxy"
description = "REST proxy for nx-neptune graph-over-data-lake workflows"
authors = [{name = "Amazon Web Services"}]
requires-python = ">=3.11"
version = "0.1.0"
keywords = ["neptune", "neptune-analytics", "rest", "proxy", "fastapi"]
license = {text = "Apache-2.0"}
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
]

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "nx-neptune",
]

[project.urls]
"Bug Tracker" = 'https://github.com/awslabs/nx-neptune/issues'
"Source Code" = 'https://github.com/awslabs/nx-neptune'

[project.optional-dependencies]
test = [
    'pytest>=7.2',
    'pytest-asyncio>=0.26.0',
    'httpx>=0.28,<1',
]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.flake8]
max-complexity = 12
max-line-length = 127
extend-ignore = ['E203','W503']

[tool.black]
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
exclude = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
