[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = "neptune-controller"
description = "Neptune Analytics resource controller"
authors = [{name = "Amazon Web Services"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["networkx", "graphs", "algorithms", "neptune"]
version = "1.0.0"
#license = {text = "Apache-2.0"}
#classifiers = [
#    'Intended Audience :: Developers',
#    'Intended Audience :: Science/Research',
#    'License :: OSI Approved :: Apache Software License',
#    'Operating System :: OS Independent',
#    'Programming Language :: Python :: 3',
#    'Programming Language :: Python :: 3.11',
#    'Programming Language :: Python :: 3.12',
#    'Programming Language :: Python :: 3.13',
#    'Programming Language :: Python :: 3 :: Only',
#]

dependencies = [
    "boto3>=1.37,<2.0",
    "cymple>=0.12.0,<1.0.0",
    "sqlglot>=28.0.0,<29.0.0",

]

[project.urls]
"Bug Tracker" = 'https://github.com/awslabs/nx-neptune/issues'
"Source Code" = 'https://github.com/awslabs/nx-neptune'




[tool.setuptools]
zip-safe = false
include-package-data = false
py-modules = ["instace_management"]


platforms = [
    'Linux',
    'Mac OSX',
    'Windows',
    'Unix',
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build*", "dist*", "*.egg-info*"]


[tool.isort]
profile = "black"

[tool.flake8]
max-complexity = 12
max-line-length = 127
extend-ignore = ['E203','F401','F403','W503', 'C901']
# C901 to suppress lengthy API signature on algorithms

[tool.black]
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
exclude = []


[tool.pip-licenses]
ignore-packages = [
    # Following packge has no license info embedded on package level.
    "cymple", # MIT: https://github.com/Accenture/Cymple/blob/master/LICENSE
    "dotenv", # BDS 3-Calause: https://github.com/theskumar/python-dotenv
    "ipykernel", # BSD 3-Clause
    "filelock", # Unlicense: https://github.com/tox-dev/filelock

]


allow-only = """
Apache Software License;
Apache-2.0; Apache License, Version 2.0; Apache 2.0; Apache-2.0 AND BSD-2-Clause;
BSD License; BSD-2-Clause; BSD-3-Clause;
CC0 1.0 Universal (CC0 1.0) Public Domain Dedication;
GNU General Public License (GPL);
MIT;MIT License;  License :: OSI Approved :: MIT License; MIT-CMU;
Mozilla Public License 2.0 (MPL 2.0);
Public Domain;
Python Software Foundation License;
Zero-Clause BSD (0BSD);
ISC License (ISCL);
PSF-2.0;
"""
